k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tickethub-frontend
  namespace: tickethub

spec:
  replicas: 2

  selector:
    matchLabels:
      app: tickethub-frontend

  template:
    metadata:
      labels:
        app: tickethub-frontend

    spec:
      containers:
        - name: frontend

          image: tickethubacr2026.azurecr.io/tickethub-frontend:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "250m"
              memory: "256Mi"

          livenessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 15
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 10
            periodSeconds: 5
