k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: tickethub-backend-service
  namespace: tickethub

spec:
  selector:
    app: tickethub-backend

  ports:
    - port: 5000
      targetPort: 5000

  type: ClusterIP
