k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: tickethub-frontend-service
  namespace: tickethub

spec:
  selector:
    app: tickethub-frontend

  ports:
    - port: 80
      targetPort: 80

  type: LoadBalancer
